--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
 <p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Vous avez demandé la réinitialisation de votre mot de passe. Merci de cliquer sur le lien ci-dessous pour continuer la procédure :</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Réinitialiser mon mot de passe', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Si vous n'êtes pas à l'origine de cette demande, vous pouvez l'ignorer.</p>
+<p>Le mot de passe ne sera pas modifié tant que vous n'aurez pas cliqué sur le lien et validé un nouveau mot de passe.</p>
