--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,33 @@
-<h2>Sign up</h2>
+<div>
+  <h2>Devenir un coworker</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-  </div>
+      <div class="form-inputs">
+        <%= f.input :first_name, label: 'Prénom',
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "Prénom" }%>
+        <%= f.input :last_name, label: 'Nom',
+                    required: true,
+                    input_html: { autocomplete: "Nom" }%>
+        <%= f.input :email, label: 'Email',
+                    required: true,
+                    input_html: { autocomplete: "email" }%>
+        <%= f.input :password, label: 'Mot de passe',
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "Mot de passe" } %>
+        <%= f.input :password_confirmation, label: 'Confirmation du mot de passe',
+                    required: true,
+                    input_html: { autocomplete: "Confirmation du mot de passe" } %>
+      </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
+      <div class="form-actions">
+        <%= f.button :submit, "Je deviens un coworker" %>
+      </div>
+    <% end %>
 
-<%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+</div>
