--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,28 @@
 // Import page-specific CSS files here.
 @import "home";
+
+
+// @media(max-width: 992px) {
+//   .cards {
+//     grid-template-columns: 1fr 1fr;
+//   }
+// }
+
+// @media(max-width: 768px) {
+//   .cards {
+//     grid-template-columns: 1fr;
+//   }
+// }
+
+
+.main-container {
+  display: flex;
+}
+
+#map {
+  height: 100vh;
+}
+
+.cards {
+  flex-grow: 1;
+}
