--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -1,10 +1,11 @@
-<div class="container-fluid">
-  <div class="row">
-    <!-- Cartes à gauche -->
+
+   <!-- Titre -->
     <div class="col-lg-8 col-md-8 col-12">
       <div class="mx-auto mt-2 mb-3">
         <h1 class="text-center">Workspaces</h1>
       </div>
+<div class="container">
+  <!-- cards -->
       <div class="container">
         <div class="row">
           <% @workspaces.each do |workspace| %>
@@ -16,14 +17,25 @@
                   <% end  %>
                   <div class="card-trip-infos">
                     <div>
-                      <%= workspace.name %>
-                      <p><%= workspace.name%></p>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          <% end %>
+                      <%= workspace.name %>   </a>
+              </div>
         </div>
       </div>
     </div>
+    <% end %>
+
+<!-- map -->
+<div class="col-lg-4 col-md-4 col-12 d-md-block">
+  <div class="row">
+    <!-- Pour mobiles, afficher d'abord la carte en haut -->
+    <div class="col-12 d-md-none">
+      <div style="width: 300px; height: 600px;"
+        data-controller="map"
+        data-map-markers-value="<%= @markers.to_json %>"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+    </div>
+
+  </div>
+
+  </div>
+</div>
