user_account maj

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,15 @@
-<p>Hello <%= @resource.email %>!</p>
+<div class="container">
+  <div class="row form-user">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
-<p>Vous avez demandé la réinitialisation de votre mot de passe. Merci de cliquer sur le lien ci-dessous pour continuer la procédure :</p>
+      <p>Bonjour <%= @resource.email %>!</p>
 
-<p><%= link_to 'Réinitialiser mon mot de passe', edit_password_url(@resource, reset_password_token: @token) %></p>
+      <p>Vous avez demandé la réinitialisation de votre mot de passe. Merci de cliquer sur le lien ci-dessous pour continuer la procédure :</p>
 
-<p>Si vous n'êtes pas à l'origine de cette demande, vous pouvez l'ignorer.</p>
-<p>Le mot de passe ne sera pas modifié tant que vous n'aurez pas cliqué sur le lien et validé un nouveau mot de passe.</p>
+      <p><%= link_to 'Réinitialiser mon mot de passe', edit_password_url(@resource, reset_password_token: @token) %></p>
+
+      <p>Si vous n'êtes pas à l'origine de cette demande, vous pouvez l'ignorer.</p>
+      <p>Le mot de passe ne sera pas modifié tant que vous n'aurez pas cliqué sur le lien et validé un nouveau mot de passe.</p>
+    </div>
+  </div>
+</div>
