--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,12 @@
-<p>Welcome <%= @email %>!</p>
+<div class="container">
+  <div class="row form-user">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
-<p>Merci de confirmer votre email en cliquant sur le lien ci-dessous:</p>
+      <p>Welcome <%= @email %>!</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+      <p>Merci de confirmer votre email en cliquant sur le lien ci-dessous:</p>
+
+      <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+    </div>
+  </div>
+</div>
