--- a/app/views/devise/mailer/email_changed.html.erb
+++ b/app/views/devise/mailer/email_changed.html.erb
@@ -1,7 +1,14 @@
-<p>Hello <%= @email %>!</p>
+<div class="container">
+  <div class="row form-user">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
-<% if @resource.try(:unconfirmed_email?) %>
-  <p>Nous vous informons que votre email a bien été changé par <%= @resource.unconfirmed_email %>.</p>
-<% else %>
-  <p>Nous vous informons que votre email a bien été changé par <%= @resource.email %>.</p>
-<% end %>
+      <p>Hello <%= @email %>!</p>
+
+      <% if @resource.try(:unconfirmed_email?) %>
+        <p>Nous vous informons que votre email a bien été changé par <%= @resource.unconfirmed_email %>.</p>
+      <% else %>
+        <p>Nous vous informons que votre email a bien été changé par <%= @resource.email %>.</p>
+      <% end %>
+    </div>
+  </div>
+</div>
