--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,10 @@
-<p>Hello <%= @resource.email %>!</p>
+<div class="container">
+  <div class="row form-user">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
-<p>Votre mot de passe a bien été modifié !</p>
+      <p>Hello <%= @resource.email %>!</p>
+
+      <p>Votre mot de passe a bien été modifié !</p>
+    </div>
+  </div>
+</div>
