--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,45 +1,51 @@
-<h2>Mes informations</h2>
+<div class="container">
+  <div class="row form-user">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+      <h2>Mes informations</h2>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= f.error_notification %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+        <div class="form-inputs">
+          <%= f.input :email, required: true, autofocus: true %>
 
-    <%= f.input :first_name, label: "Prénom",
-                required: false,
-                input_html: { autocomplete: "Prénom" } %>
-    <%= f.input :last_name, label: "Nom",
-                required: false,
-                input_html: { autocomplete: "Nom" } %>
-    <%= f.input :password, label: "Mot de passe",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password, label: "Mot de passe",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation, label: "Confirmation du mot de passe",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password, label: "Mot de passe actuel",
-                hint: "Pour valider les modifications, merci de saisir votre mot de passe actuel",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <p>En attente de confirmation de <%= resource.unconfirmed_email %></p>
+          <% end %>
+
+          <%= f.input :first_name, label: "Prénom",
+                      required: false,
+                      input_html: { autocomplete: "Prénom" } %>
+          <%= f.input :last_name, label: "Nom",
+                      required: false,
+                      input_html: { autocomplete: "Nom" } %>
+          <%= f.input :last_name, label: "Addresse",
+                      required: false,
+                      input_html: { autocomplete: "Adresse" } %>
+          <%= f.input :password, label: "Nouveau mot de passe",
+                      required: false,
+                      input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation, label: "Confirmation du nouveau mot de passe",
+                      required: false,
+                      input_html: { autocomplete: "new-password" } %>
+        </div>
+
+        <div class="form-actions">
+            <%= f.input :current_password, label: "Mot de passe actuel",
+              hint: "Pour valider les modifications, merci de saisir votre mot de passe actuel",
+              required: true,
+              input_html: { autocomplete: "current-password" } %>
+          <%= f.button :submit, "Sauvegarder les modifications" %>
+        </div>
+      <% end %>
+
+      <div>
+
+        <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Êtes-vous sûr ?", turbo_confirm: "Êtes-vous sûr de supprimer votre compte ainsi que toutes ses données ? Il ne sera pas possible de le réactiver plus tard, vous devrez créer un nouveau compte." }, method: :delete %></div>
+
+        <%= link_to "Retour", :back %>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sauvegarder les changements" %>
-  </div>
-<% end %>
-
-<div>
-<h5>Supprimer mon compte</h5>
-
-<%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Êtes-vous sûr ?", turbo_confirm: "Êtes-vous sûr de supprimer votre compte ainsi que toutes ses données ? Il ne sera pas possible de le réactiver plus tard, vous devrez créer un nouveau compte." }, method: :delete %></div>
-
-<%= link_to "Retour", :back %>
 </div>
