--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,38 +1,25 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand px-2">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
+    <ul class="navbar-nav me-auto">
+      <li class="nav-item">
+        <%= image_tag('svg/Home-icon-gray.svg', class: "nav-link", style: "width: 50%;") %>
+      </li>
+      <li class="nav-item">
+        <%= image_tag('svg/Heart-icon-gray.svg', class: "nav-link", style: "width: 50%;") %>
+      </li>
+      <li class="nav-item">
+        <%= image_tag('svg/Laptop-icon-gray.svg', class: "nav-link", style: "width: 50%;") %>
+      </li>
+      <li class="nav-item">
+        <%= image_tag('svg/Chat-icon-gray.svg', class: "nav-link", style: "width: 50%;") %>
+      </li>
+      <li class="nav-item">
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
+          <%= image_tag('svg/Profil-icon-gray.svg', class: "nav-link", style: "width: 50%;") %>
         <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
+          <%= image_tag('svg/Profil-icon-gray.svg', class: "nav-link", style: "width: 50%;") %>
         <% end %>
-      </ul>
-    </div>
+      </li>
+    </ul>
   </div>
 </div>
