--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -28,7 +28,7 @@
 <div class="col-lg-4 col-md-4 col-12 d-md-block">
   <div class="row">
     <!-- Pour mobiles, afficher d'abord la carte en haut -->
-    <div class="col-12 d-md-none">
+    <div class="col-12">
       <div style="width: 300px; height: 600px;"
         data-controller="map"
         data-map-markers-value="<%= @markers.to_json %>"
