--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,13 +16,13 @@
 
           <%= f.input :first_name, label: "Prénom",
                       required: false,
-                      input_html: { autocomplete: "Prénom" } %>
+                      input_html: { autocomplete: "first_name" } %>
           <%= f.input :last_name, label: "Nom",
                       required: false,
-                      input_html: { autocomplete: "Nom" } %>
-          <%= f.input :last_name, label: "Addresse",
+                      input_html: { autocomplete: "last_name" } %>
+          <%= f.input :address, label: "Adresse",
                       required: false,
-                      input_html: { autocomplete: "Adresse" } %>
+                      input_html: { autocomplete: "address" } %>
           <%= f.input :password, label: "Nouveau mot de passe",
                       required: false,
                       input_html: { autocomplete: "new-password" } %>
@@ -42,7 +42,7 @@
 
       <div>
 
-        <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Êtes-vous sûr ?", turbo_confirm: "Êtes-vous sûr de supprimer votre compte ainsi que toutes ses données ? Il ne sera pas possible de le réactiver plus tard, vous devrez créer un nouveau compte." }, method: :delete %></div>
+        <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Êtes-vous sûr ?", turbo_confirm: "Êtes-vous sûr de supprimer votre compte ainsi que toutes ses données ? Il ne sera pas possible de le réactiver plus tard, vous devrez créer un nouveau compte." }, method: :delete class: "blue-button" %></div>
 
         <%= link_to "Retour", :back %>
       </div>
