--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,12 @@
+body {
+  padding-bottom: 80px; /* Ajustez cette valeur en fonction de la hauteur de votre navbar */
+}
+
 .navbar {
+  justify-content: space-around;
   position: fixed;
-  bottom: 1%;
+  margin-top: auto;
+  bottom: 1%; /* Ajustez cette valeur */
   width: 100%;
   z-index: 999;
   background-color: #FFFFFF;
