--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -4,6 +4,18 @@
       <div class="mx-auto mt-2 mb-3">
         <h1 class="text-center">Workspaces</h1>
       </div>
+      <div class="row justify-content-center">
+  <div class="col-sm-8 my-3">
+    <%= form_with url: workspaces_path, method: :get, class: "d-flex" do %>
+      <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Type a keyword"
+        %>
+      <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
 <div class="container">
   <!-- cards -->
       <div class="container">
