--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand px-4">
   <div class="container">
-    <ul class="navbar-nav">
-      <li class="nav-item">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item" style="margin-left: 25px;">
         <%= link_to image_tag("#{@current_page == 'home' ? 'svg/Home-icon-orange.svg' : 'svg/Home-icon-gray.svg'}", class: "nav-link", style: "width: 70%;"), root_path %>
       </li>
       <li class="nav-item">
