--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -32,7 +32,7 @@
             </div>
 
             <div class="form-actions">
-              <%= f.button :submit, "Je deviens un coworker" %>
+              <%= f.button :submit, "Je deviens un coworker", class: "btn yellow-btn" %>
             </div>
           <% end %>
 
