--- a/app/views/workspaces/_marker.html.erb
+++ b/app/views/workspaces/_marker.html.erb
@@ -1,3 +1,5 @@
+<div class="marker">
 <% if workspace.photos.any? %>
   <%= image_tag workspace.photos.first, height: 30, width: 30, alt: "Logo" %>
 <% end %>
+</div>
