--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -1,5 +1,5 @@
 
-   <!-- Titre -->
+<!-- Titre -->
     <div class="col-lg-8 col-md-8 col-12">
       <div class="mx-auto mt-2 mb-3">
         <h1 class="text-center">Workspaces</h1>
@@ -25,29 +25,29 @@
               <a href="<%= workspace_path(workspace) %>">
                 <div class="card-trip card-trip-list custom-link">
                   <% workspace.photos.each do |photo| %>
-                    <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
+                    <%= cl_image_tag photo.key, width: 340, crop: :fill %>
                   <% end  %>
                   <div class="card-trip-infos">
                     <div>
-                      <%= workspace.name %>   </a>
+                      <h2><%= workspace.name %> </h2>  </a>
               </div>
         </div>
       </div>
     </div>
     <% end %>
 
+
+
 <!-- map -->
-<div class="col-lg-4 col-md-4 col-12 d-md-block">
-  <div class="row">
-    <!-- Pour mobiles, afficher d'abord la carte en haut -->
-    <div class="col-12">
-      <div style="width: 300px; height: 600px;"
-        data-controller="map"
-        data-map-markers-value="<%= @markers.to_json %>"
-        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+    <div class="col-lg-4 col-md-4 col-12 d-md-block">
+      <div class="row">
+        <div class="col-12">
+          <div style="square" id="map"
+            data-controller="map"
+            data-map-markers-value="<%= @markers.to_json %>"
+            data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+          </div>
+        </div>
+      </div>
     </div>
-
-  </div>
-
-  </div>
 </div>
