--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,32 @@
-<img class="logo-carr" src="https://c.animaapp.com/Evbud771/img/logo-carr-.png" />
+<div class="container">
+  <div class="row">
+    <div class="col-12 text-center logo-carr">
+      <img class="img-fluid" src="https://i.ibb.co/CBtyrxS/logo-coworkers-6.png" alt="Coworkers-Logo">
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-11 text-center">
+      <div class="search-container">
+        <input type="text" id="search-input" placeholder="Ou souhaitez vous télétravailler ?">
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-11 text-center">
+        <button class="yellow-btn btn-home">Proposer mon bureau</button>
+      </div>
+    </div>
+  </div>
+  </div>
+</div>
+</div>
+</div>
+<div class="container">
+  <div class="teletravaillez mt-3 mb-4">
+    <h2 style="font-size: 40px;">
+        Télétravaillez<br />
+        Autrement
+    </h2>
+  </div>
+</div>
