Revert "search bar"

--- a/app/assets/stylesheets/components/_globals.scss
+++ b/app/assets/stylesheets/components/_globals.scss
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:500,400|Hammersmith+One:400");
+
 body {
-  background-color: #F3F8FE;
+  background-color: #F4F4F4;
 }
 
 a {
