--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,82 +1,6 @@
-/* Sur les écrans mobiles */
 .logo-carr {
-  margin: 3% auto;
-  width: 55%;
-}
-
-/* Sur les tablettes */
-@media (min-width: 908px) {
-  .logo-carr {
-    max-width: 30%;
-  }
-}
-
-/* Sur les écrans plus grands*/
-@media (min-width: 1568px) {
-  .logo-carr {
-    max-width: 25%;
-  }
-}
-
-.teletravaillez h2 {
-  font-size: 9em;
-  letter-spacing: 0.5em;
-  line-height: 1.8;
-}
-
-.search-container {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  padding-top: 15px;
-}
-
-#search-input {
-  width: 100%;
-  padding: 8px 20px;
-  margin-left: 10%;
-  background-color: transparent;
-  transition: transform 250ms ease-in-out;
-  font-size: 10px;
-  line-height: 18px;
-  color: #575756;
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-size: 18px 18px;
-  background-position: 95% center;
-  border-radius: 50px;
-  border: 1px solid #575756;
-  transition: all 250ms ease-in-out;
-  backface-visibility: hidden;
-  transform-style: preserve-3d;
-
-  &::placeholder {
-      color: rgba(0, 0, 0, 0.8);
-      text-transform: uppercase;
-      letter-spacing: 1.3px;
-  }
-
-  &:hover,
-  &:focus {
-      padding: 12px 0;
-      outline: 0;
-      border: 1px solid transparent;
-      border-bottom: 1px solid #575756;
-      border-radius: 0;
-      background-position: 100% center;
-  }
-}
-
-#search-button {
-  background-color: rgba(76, 175, 79, 0.733);
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
-
-#search-button:hover {
-  background-color: #45a049;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3%;
 }
