--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -19,7 +19,7 @@
                 <div class="card-trip card-trip-list custom-link">
                   <div class="row">
                     <% @workspace.photos %>
-                      <%= cl_image_tag @workspace.photos.first.key, width: 400, crop: :fill %>
+                      <%= cl_image_tag @workspace.photos.first.key, height: 300, width: 400, crop: :fill %>
                       <%= simple_form_for([@workspace, @booking]) do |f| %>
                         <%= f.input :start_date,
                                     as: :string,
