--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -1,34 +1,34 @@
-
-
 <div class="container-fluid">
   <div class="row">
     <!-- Cartes à gauche -->
     <div class="col-lg-8 col-md-8 col-12">
-      <div class="mx-auto mt-2 mb-3">
-        <h1>   <%= @workspace.name %> </h1>
-          <ul><li> Adresse : <%= @workspace.address %> </li>
-              <li> Nombre de places disponibles : <%= @workspace.capacity %> </li>
-              <li> Connexion internet : <%= @workspace.internet_connexion %> </li>
-              <li> Fumeur : <%= @workspace.smoking %> </li>
-              <li> Présence d'amimaux : <%= @workspace.animals %> </li>
-          </ul>
-
-      </div>
       <div class="container">
-            <div class="col-lg-4 col-md-4 col-12 mb-5"> <!-- Réduisez la largeur des cartes ici -->
-                <div class="card-trip card-trip-list custom-link">
-                  <div class="row">
-                    <% @workspace.photos %>
-                      <%= cl_image_tag @workspace.photos.first.key, width: 400, crop: :fill %>
-                      <%= simple_form_for([@workspace, @booking]) do |f| %>
-                        <%= f.input :start_date,
-                                    as: :string,
-                                    input_html: { data: { controller: "datepicker" } } %>
-
-                        <%= f.button :submit, class: "btn btn-primary" %>
-                        <% end %>
-                </div>
+        <div class="col-lg-4 col-md-4 col-12 mb-5"> <!-- Réduisez la largeur des cartes ici -->
+          <div class="card-trip card-trip-list custom-link">
+            <div class="row heart-position">
+              <h1><%= @workspace.name %></h1>
+              <% @workspace.photos %>
+              <%= render "heart" %>
+                <%= cl_image_tag @workspace.photos.first.key, width: 500, crop: :fill %>
+                  <div class="mx-auto mt-2 mb-3">
+                    <ul>
+                      <li> Adresse : <%= @workspace.address %> </li>
+                      <li> Nombre de places disponibles : <%= @workspace.capacity %> </li>
+                      <li> Connexion internet : <%= @workspace.internet_connexion %> </li>
+                      <li> Fumeur : <%= @workspace.smoking %> </li>
+                      <li> Présence d'amimaux : <%= @workspace.animals %> </li>
+                    </ul>
+                  </div>
+                  <%= simple_form_for([@workspace, @booking]) do |f| %>
+                  <%= f.input :start_date,
+                    as: :string,
+                    input_html: { data: { controller: "datepicker" } } %>
+                    <%= f.button :submit, class: "btn btn-primary" %>
+                    <% end %>
             </div>
+          </div>
         </div>
       </div>
     </div>
+  </div>
+</div>
