--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,14 +11,29 @@
       <div class="search-container">
         <input type="text" id="search-input" placeholder="Ou souhaitez vous télétravailler ?">
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-11 text-center">
-        <button class="yellow-btn btn-home">Proposer mon bureau</button>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col-11 text-center mt-5">
+<article class="card">
+  <img
+    class="card__background"
+    src="https://i.ibb.co/p1FWWSP/bureau-de-travail-avec-verriere.jpg"
+    alt="Photo of Cartagena's cathedral at the background and some colonial style houses"
+    width="1920"
+    height="2193"
+/>
+  <div class="card__content | flow">
+    <div class="card__content--container | flow">
+      <h2 class="card__title">Chez Kévin</h2>
+      <p class="card__description">
+        Ambiance Cosy - Fumeur accepté - Deux chats gentils
+      </p>
     </div>
+    <button class="card__button">J'aime</button>
   </div>
-  </div>
+</article>
+</div>
+</div>
 </div>
 </div>
 </div>
@@ -30,3 +45,14 @@
     </h2>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col-11 text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-11 text-center">
+        <button class="yellow-btn btn-home">Proposer mon bureau</button>
+      </div>
+    </div>
+  </div>
+  </div>
