--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
-  <div class="row form-user">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
+<div class="container d-flex align-items-center justify-content-center vh-100">
+  <div class="row">
+    <div class="col-12 col-md-12 col-lg-12 mx-auto">
 
       <h2>Forgot your password?</h2>
 
