--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -1,34 +1,39 @@
+<%= image_tag @workspace.user.photos.first, height: 30, width: 30, class: "avatar2", alt: "Photo" %>
 <div class="container-fluid">
-  <div class="row">
-    <!-- Cartes à gauche -->
-    <div class="col-lg-8 col-md-8 col-12">
-      <div class="container">
-        <div class="col-lg-4 col-md-4 col-12 mb-5"> <!-- Réduisez la largeur des cartes ici -->
+    <h1><%= @workspace.name %></h1>
+        <div class="col-lg-4 col-md-4 col-12 pb-5 mb-5"> <!-- Réduisez la largeur des cartes ici -->
           <div class="card-trip card-trip-list custom-link">
             <div class="row heart-position">
-              <h1><%= @workspace.name %></h1>
               <% @workspace.photos %>
-              <%= render "heart" %>
+                <%= render "heart" %>
                 <%= cl_image_tag @workspace.photos.first.key, width: 500, crop: :fill %>
-                  <div class="mx-auto mt-2 mb-3">
+                  <div class="mx-auto p-4 mt-2 mb-3">
                     <ul>
                       <li> Adresse : <%= @workspace.address %> </li>
                       <li> Nombre de places disponibles : <%= @workspace.capacity %> </li>
-                      <li> Connexion internet : <%= @workspace.internet_connexion %> </li>
-                      <li> Fumeur : <%= @workspace.smoking %> </li>
-                      <li> Présence d'amimaux : <%= @workspace.animals %> </li>
+
+                       <div class= "d-flex justify-content-between"> Connexion internet: <% if @workspace.internet_connexion%>
+                      <div><i class="fa-solid fa-check fa-beat fa-2xl" style="color: #004792;"></i></div>
+                      <% else %>
+                      <div><i class="fa-solid fa-xmark fa-beat fa-2xl" style="color: #004792;"></i></div>
+                      <% end %>
+                      Fumeur :
+                      <% if @workspace.smoking%>
+                      <div><i class="fa-solid fa-check fa-beat fa-2xl" style="color: #004792;"></i></div>
+                      <% else %>
+                      <div><i class="fa-solid fa-xmark fa-beat fa-2xl" style="color: #004792;"></i></div>
+                      <% end %></div>
+                      <li> Présence d'aimaux : <%= @workspace.animals %> </li>
                     </ul>
                   </div>
                   <%= simple_form_for([@workspace, @booking]) do |f| %>
-                  <%= f.input :start_date,
+                  <div>Date booking</div>
+                  <%= f.input :start_date, label:false,
                     as: :string,
                     input_html: { data: { controller: "datepicker" } } %>
-                    <%= f.button :submit, class: "btn btn-primary" %>
+                    <%= f.button :submit, class: "btn yellow-btn" %>
                     <% end %>
             </div>
           </div>
         </div>
-      </div>
     </div>
-  </div>
-</div>
