--- a/app/assets/stylesheets/pages/_marker.scss
+++ b/app/assets/stylesheets/pages/_marker.scss
@@ -1,17 +1,21 @@
 .font-marker{
 background-color: #EFE9E1;
 text-decoration: none;
+
 h3 {
   font-size: 16px;
+  color: black;
   font-family: $body-font;
 }
 h4 {
   font-size: 14px;
+  color: black;
   font-family: $body-font;
 }
 
 h5 {
   font-size: 12px;
+  color: black;
   font-family: $body-font;
 }
 }
