--- a/app/assets/stylesheets/components/_globals.scss
+++ b/app/assets/stylesheets/components/_globals.scss
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500,400|Hammersmith+One:400");
 
 body {
-  background-color: #F4F4F4;
+  background-color: #f0faffd0;
+  overflow: hidden;
 }
 
 a {
