--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -17,6 +17,25 @@
   white-space: normal;
 }
 
+.yellow-btn-mini {
+  padding: 10px 20px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #FFB116;
+  background-image: linear-gradient(45deg, #FC9100 0%, #FFB116 51%, #FC9100 100%);
+  cursor: pointer;
+  opacity: 0.9;
+  max-width: 150px; /* Réduisez la largeur maximale du bouton */
+  white-space: normal;
+}
+
 .btn-home {
 margin-top: 10%;
 margin-left: 10%;
