--- a/app/assets/stylesheets/components/_heart.scss
+++ b/app/assets/stylesheets/components/_heart.scss
@@ -8,7 +8,6 @@
   left: 220px;
 }
 
-
 .background{
   background: white;
   border-radius: 50%;
@@ -16,26 +15,26 @@
   width: 20px;
 }
 
-@media (max-width: 960px) {
-  /* Pour un écran < 960px, cette classe CSS s'applique */
-  .container {
-    width: 700px;
-  }
-}
+// @media (max-width: 960px) {
+//   /* Pour un écran < 960px, cette classe CSS s'applique */
+//   .container {
+//     width: 700px;
+//   }
+// }
 
-@media (max-width: 720px) {
-  /* Pour un écran < 720px, cette classe CSS s'applique */
-  .container {
-    width: 500px;
-  }
-}
+// @media (max-width: 720px) {
+//   /* Pour un écran < 720px, cette classe CSS s'applique */
+//   .container {
+//     width: 500px;
+//   }
+// }
 
-@media (max-width: 540px) {
-  /* Pour un écran < 540px, cette classe CSS s'applique */
-  .container {
-    width: 300px;
-  }
-}
+// @media (max-width: 540px) {
+//   /* Pour un écran < 540px, cette classe CSS s'applique */
+//   .container {
+//     width: 300px;
+//   }
+// }
 
 
 
@@ -93,4 +92,3 @@
 //   transform: rotate(45deg);
 //   transform-origin: 100% 100%;
 // }
-
