--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -22,6 +22,12 @@
   padding-left: 10px;
 }
 
+.card-product3 h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
 .card-product img {
   height: 80%;
   width: 120px;
