--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -19,7 +19,8 @@
   align-items: center;
   border-radius: 10%;
   margin: 20px;
-  padding-left: 10px;
+  padding-left: 30px;
+  padding-top: 30px;
 }
 
 .card-product3 h2 {
