--- a/app/views/workspaces/index.html.erb
+++ b/app/views/workspaces/index.html.erb
@@ -10,7 +10,7 @@
     <div class="col-10 text-center mt-2 mb-3">
       <form id="search-form" action="<%= workspaces_path %>" method="GET">
         <div class="search-container">
-          <input type="text" id="search-input" class="search-input" placeholder="Où souhaitez-vous télétravailler ?">
+          <input type="text" id="search-input" class="search-input" placeholder="Où souhaitez-vous télétravailler?" type="button">
           <!-- Ajouter un champ caché pour stocker la valeur de recherche -->
           <input type="hidden" id="search-query" name="query">
         </div>
