--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,3 +1,8 @@
+    <div class="col-lg-8 col-md-8 col-12">
+      <div class="mx-auto mt-4">
+        <h1 class="text-center display-4" style="text-shadow: 2px 2px 4px rgba(5, 0, 0, 0.2);">Favoris</h1>
+      </div>
+    </div>
 <div class="container-fluid">
   <div class="row">
     <!-- Cartes à gauche -->
