--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,4 +1,8 @@
-<h1>Mon dashboard</h1>
+    <div class="col-lg-8 col-md-8 col-12">
+      <div class="mx-auto mt-4">
+        <h1 class="text-center display-4" style="text-shadow: 2px 2px 4px rgba(5, 0, 0, 0.2);">Dashboard</h1>
+      </div>
+    </div>
 
 <div class="card-product">
 
